Scenario-4-Cross-Cluster-Traffic-Management/sub-scenarios/4a-fault-detection-via-EnvoyFilter/istio-envoy-filter-status-check-cluster.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: status-check-healthcheck
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
    - applyTo: CLUSTER
      match:
        cluster:
          name: >-
            outbound|8080||rest-greeting-remote.greetings-service.svc.cluster.local
        context: GATEWAY
      patch:
        operation: MERGE
        value:
          health_checks:
            - always_log_health_check_failures: true
              event_log_path: /dev/stdout
              healthy_threshold: 3
              http_health_check:
                host: quarkus-rest-503.greetings-service.svc.cluster.local
                path: /status/check
              interval: 5s
              no_traffic_interval: 15s
              timeout: 5s
              unhealthy_threshold: 5
